--- a/src/scss/ui/contenido/_servicios.scss
+++ b/src/scss/ui/contenido/_servicios.scss
@@ -6,4 +6,48 @@
         @include m.headingCursiva;
         margin-bottom: 5rem;
     }
+    
+    &__grid {
+        @include m.grid(1, 2rem);
+        @include m.tablet {
+            @include m.grid(2, 2rem);
+        }
+
+        @include m.desktop { 
+            @include m.grid(4, 2rem);	
+        }
+    }
+}
+
+.servicio {
+    &__contenido {
+        background-color: v.$blanco;
+        padding: 2rem;
+    }
+
+    &__mask {
+        overflow: hidden;
+    }
+
+    &__imagen {
+        width: 100%;
+        transition-property: transform;
+        transition-duration: .3s;
+        
+        &:hover {
+            transform: scale(1.2);
+        }
+    }
+
+    &__nombre {
+        @include m.heading;
+        font-size: 2.4rem;
+        color: v.$secundario;
+    }
+
+    &__descripcion {
+        font-size: 1.6rem;
+        text-transform: uppercase;
+        line-height: 1.8;
+    }
 }    
