--- a/src/scss/ui/contenido/_servicios.scss
+++ b/src/scss/ui/contenido/_servicios.scss
@@ -43,11 +43,16 @@
         @include m.heading;
         font-size: 2.4rem;
         color: v.$secundario;
+        padding-bottom: 2rem;
+    }
+
+    &__listado {
+        list-style:disc ;
     }
 
     &__descripcion {
-        font-size: 1.6rem;
-        text-transform: uppercase;
+        font-size: 1.7rem;
+        text-transform: capitalize;
         line-height: 1.8;
     }
 }    
